--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cached_network_image: ^3.3.0
   shimmer: ^3.0.0
   url_launcher: ^6.2.1
+  file_picker: ^10.3.7
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
