--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,7 @@ dependencies:
   url_launcher: ^6.2.1
   file_picker: ^10.3.7
   intl: ^0.20.2
-
-dev_dependencies:
+  flutter_secure_storage: ^9.0.0
   flutter_test:
     sdk: flutter
 
