--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   file_picker: ^10.3.7
   intl: ^0.20.2
   flutter_secure_storage: ^9.0.0
+  flutter_local_notifications: ^17.0.0
   flutter_test:
     sdk: flutter
 
@@ -52,6 +53,7 @@ dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_markdown: ^0.7.7+1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
