--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
   flutter_markdown: ^0.7.7+1
+  workmanager: ^0.9.0+3
+  timezone: ^0.9.4
+  flutter_timezone: ^5.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
